02_deployment_postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: pod-storage
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: pod-storage
          persistentVolumeClaim:
            claimName: webdav
