05_StatefulSet.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccount: prometheus
      terminationGracePeriodSeconds: 10
      containers:
        - name: prometheus-k8s
          image: prom/prometheus:v2.19.2
          ports:
            - protocol: TCP
              containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus
            - name: data-volume
              mountPath: /prometheus
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-configmap
            items:
              - key: prometheus.yml
                path: prometheus.yml
  volumeClaimTemplates:
    - metadata:
        name: data-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: csi-ceph-hdd-dp1
        resources:
          requests:
            storage: 5Gi
