deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubedoom-depl
  namespace: kubedoom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubedoom-app
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: kubedoom-app
    spec:
      containers:
      - image: storaxdev/kubedoom:0.5.0
        name: kubedoom
        ports:
        - containerPort: 5900
          protocol: TCP
      hostNetwork: true
      serviceAccountName: kubedoom
