05_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
  - port: 5432
  selector:
    app: postgres-db
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: service2redmine
spec:
  ports:
  - port: 8080
    targetPort: 3000
  selector:
    app: redmine-app
  type: ClusterIP
